support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_macro_defined_unterminated.i
%module xxx


#if defined(a
#endif

